--- a/GUI/PurchaseOrderManagement/CreatePurchaseOrderGUI.form
+++ b/GUI/PurchaseOrderManagement/CreatePurchaseOrderGUI.form
@@ -59,7 +59,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="12384" class="javax.swing.JButton" custom-create="true" default-binding="true">
+      <component id="12384" class="javax.swing.JButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -67,7 +67,7 @@
           <text value="Cancel Purchase Order "/>
         </properties>
       </component>
-      <component id="b6939" class="javax.swing.JButton" binding="createPurchaseOrderButton" custom-create="true" default-binding="true">
+      <component id="b6939" class="javax.swing.JButton" binding="createPurchaseOrderButton" default-binding="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
