--- a/GUI/PurchaseOrderManagement/ItemPOInfo.form
+++ b/GUI/PurchaseOrderManagement/ItemPOInfo.form
@@ -38,7 +38,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="421d2" class="javax.swing.JButton" custom-create="true" default-binding="true">
+      <component id="421d2" class="javax.swing.JButton" default-binding="true">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -46,7 +46,7 @@
           <text value="Cancel "/>
         </properties>
       </component>
-      <component id="2d101" class="javax.swing.JButton" custom-create="true" default-binding="true">
+      <component id="2d101" class="javax.swing.JButton" default-binding="true">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
