--- a/GUI/CustomerInvoiceSearch/CustomerInvoiceSearchGUI.form
+++ b/GUI/CustomerInvoiceSearch/CustomerInvoiceSearchGUI.form
@@ -1,40 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.CustomerOrderSearch.CustomerOrderSearchGUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.CustomerInvoiceSearch.CustomerInvoiceSearchGUI">
   <grid id="27dc6" binding="rootPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="900" height="300"/>
+      <xy x="20" y="20" width="800" height="200"/>
     </constraints>
     <properties>
-      <minimumSize width="800" height="300"/>
-      <preferredSize width="800" height="300"/>
+      <minimumSize width="800" height="200"/>
+      <preferredSize width="800" height="200"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="7eba8" binding="buttonPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="20" bottom="0" right="20"/>
+      <grid id="6efe6" binding="buttonPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="West"/>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="497ce" class="javax.swing.JButton" binding="viewAllButton" default-binding="true">
+          <component id="4c9d7" class="javax.swing.JButton" binding="mainMenuButton" default-binding="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="View All"/>
-            </properties>
-          </component>
-          <component id="21704" class="javax.swing.JButton" binding="mainMenuButton" default-binding="true">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Main Menu"/>
             </properties>
           </component>
-          <component id="30b6a" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
+          <component id="156b7" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Logout"/>
@@ -42,13 +34,13 @@
           </component>
         </children>
       </grid>
-      <grid id="26f03" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ad6d3" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="54bf6" binding="mainTopBarPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="35294" binding="mainTopBarPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -56,23 +48,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="fcfcb" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Search Customer Orders [Customer Name]"/>
-                </properties>
-              </component>
-              <component id="8dfb4" class="javax.swing.JTextField" binding="searchTextField">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="272e8" class="javax.swing.JButton" binding="searchButton" default-binding="true">
+              <component id="2259a" class="javax.swing.JButton" binding="searchButton" default-binding="true">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -80,9 +56,25 @@
                   <text value="Search"/>
                 </properties>
               </component>
+              <component id="24b53" class="javax.swing.JTextField" binding="searchTextField">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="66fdb" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Search Customer Invoices [Customer Name]"/>
+                </properties>
+              </component>
             </children>
           </grid>
-          <component id="e0d34" class="javax.swing.JList" binding="customerOrderList">
+          <component id="463bf" class="javax.swing.JList" binding="customerInvoiceList">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
