--- a/GUI/PurchaseOrderManagement/PurchaseOrderGUI.form
+++ b/GUI/PurchaseOrderManagement/PurchaseOrderGUI.form
@@ -7,6 +7,7 @@
     </constraints>
     <properties>
       <background color="-1118482"/>
+      <enabled value="false"/>
       <preferredSize width="600" height="300"/>
     </properties>
     <border type="none"/>
